--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Main#index</h1>
-<p>Find me in app/views/main/index.html.erb</p>
+<h1>Lines</h1>
+
+<ul>
+    <% @lines.each do |line| %>
+  <li>
+      <%= line.name %>
+  </li>
+  <% end %>
+</ul>
