Add Lines controller with show method

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,8 +2,8 @@
 
 <ul>
     <% @lines.each do |line| %>
-  <li>
-      <%= line.name %>
-  </li>
-  <% end %>
+    <li>
+        <%= link_to line.name, line %>
+    </li>
+    <% end %>
 </ul>
