Add status for every hour

--- a/app/views/lines/_hour.html.erb
+++ b/app/views/lines/_hour.html.erb
@@ -1,5 +1,7 @@
-<% if enabled %>
+<% if status == 'on' %>
     <li style="background-color: green;"><%= hour %></li>
-<% else %>
+<% elsif status == 'off' %>
     <li style="background-color: red;"><%= hour %></li>
+<% else %>
+    <li style="background-color: yellow;"><%= hour %></li>
 <% end %>
