--- a/app/views/lines/show.html.erb
+++ b/app/views/lines/show.html.erb
@@ -4,7 +4,7 @@
 <div><%= l @day.date, format: "%A, %e %b %Y" %></div>
 <ul>
     <% for index in 1...24 %>
-    <%= render "hour", hour: index, enabled: status_for(@day, index) %>
+    <%= render "hour", hour: index, status: status_for(@day, index) %>
     <% end %>
 </ul>
 <% else %>
