--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-bs-theme="light">
+<html data-bs-theme="dark">
   <head>
     <title>Svitlo</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
