--- a/app/views/lines/show.html.erb
+++ b/app/views/lines/show.html.erb
@@ -5,40 +5,40 @@
         <% if @day.present? %>
         <div class="row">
             <div class="my-2"><%= l @day.date, format: "%A, %e %b %Y" %></div>
-
-            <div class="col">
-                <% for index in 1..12 %>
-                <div class="row py-2">
-                    <div class="col-sm-1"><span><%= index %></span></div>
-                    <div class="col rounded-3 <%= opacity_for(index) %> <%= background_class_for(status_for(@day, index)) %>">
-                        <% if Time.now.hour == index %>
-                        <hr class="border-danger border-2 opacity-75">
-                        <% else %>
-                        <hr class="border-2 opacity-0">
-                        <% end %>
-                    </div>
-                </div>
-                <% end %>
-            </div>
-
-            <div class="col">
-                <% for index in 13..24 %>
-                <div class="row py-2">
-                    <div class="col-sm-1"><span><%= index %></span></div>
-                    <div class="col rounded-3 <%= opacity_for(index) %> <%= background_class_for(status_for(@day, index)) %>">
-                        <% if Time.now.hour == index %>
-                        <hr class="border-danger border-2 opacity-75">
-                        <% else %>
-                        <hr class="border-2 opacity-0">
-                        <% end %>
-                    </div>
-                </div>
-                <% end %>
-            </div>
         </div>
 
         <div class="row">
-            <div class="col col-sm-4">
+            <div class="col">
+                <% for index in 1..12 %>
+                <div class="row py-1">
+                    <div class="col-sm-2"><span><%= index %></span></div>
+                    <div class="col rounded-3 <%= opacity_for(index) %> <%= background_class_for(status_for(@day, index)) %>">
+                        <% if Time.now.hour == index %>
+                        <hr class="border-danger border-2 opacity-75">
+                        <% else %>
+                        <hr class="border-2 opacity-0">
+                        <% end %>
+                    </div>
+                </div>
+                <% end %>
+            </div>
+            <div class="col-sm-1"></div>
+            <div class="col">
+                <% for index in 13..24 %>
+                <div class="row py-1">
+                    <div class="col-sm-2"><span><%= index %></span></div>
+                    <div class="col rounded-3 <%= opacity_for(index) %> <%= background_class_for(status_for(@day, index)) %>">
+                        <% if Time.now.hour == index %>
+                        <hr class="border-danger border-2 opacity-75">
+                        <% else %>
+                        <hr class="border-2 opacity-0">
+                        <% end %>
+                    </div>
+                </div>
+                <% end %>
+            </div>
+            <div class="col-sm-1"></div>
+            <div class="col-sm-4">
                 <table class="table">
                     <thead>
                         <tr>
@@ -49,9 +49,9 @@
                   <tbody>
                     <tr>
                         <td class="bg-success bg-opacity-75" scope="col"></td>
-                      <td scope="col">черга буде з електропостачанням</td>
-                  </tr>
-                  <tr>
+                        <td scope="col">черга буде з електропостачанням</td>
+                    </tr>
+                    <tr>
                       <td class="bg-warning bg-opacity-75" scope="col"></td>
                       <td scope="col">можливі вимкнення</td>
                   </tr>
