--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,9 +1,14 @@
-<h1>Lines</h1>
+<main>
+    <div class="container px-4 py-2">
+        <h1>Івано-Франківськ - графік погодинних вимкнень, <%= l Date.today, format: "%A, %e %b %Y" %></h1>
 
-<ul>
-    <% @lines.each do |line| %>
-    <li>
-        <%= link_to line.name, line %>
-    </li>
-    <% end %>
-</ul>
+        <ul>
+            <% @lines.each do |line| %>
+            <li>
+                <%= link_to line.name, line %>
+            </li>
+            <% end %>
+        </ul>
+
+    </div>
+</main>
