--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html data-bs-theme="dark">
+<html lang="ua" data-bs-theme="dark">
   <head>
-    <title>Svitlo</title>
+    <title><%= @title %></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="<%= yield_meta_tag(:description, '') %>" />
+    <meta name="keywords" content="<%= yield_meta_tag(:keywords, '') %>" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
