--- a/app/views/lines/show.html.erb
+++ b/app/views/lines/show.html.erb
@@ -1,3 +1,4 @@
+<% @title = "Графік вимкнень, #{@line.name}, #{I18n.l(DateTime.now, format: '%A, %e %b %Y')}, Івано-Франківськ" %>
 <main>
     <div class="container px-4 py-2">
         <h1><%= @line.name %></h1>
