Add Contacts page and update navigation

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,6 +4,7 @@
             <div class="col-md">
                 <ul class="list-unstyled text-small">
                     <li><small class="d-block mb-1 text-muted">&copy; 2023 <a class="text-muted text-decoration-none" href="https://voevodin-yura.com/ua" rel="external nofollow" target="_blank">Юра Воєводін</a></small></li>
+                    <li><a class="text-muted text-decoration-none" href="/contacts" rel="nofollow">Контакти</a></li>
                 </ul>
             </div>
         </div>
