--- a/app/views/lines/show.html.erb
+++ b/app/views/lines/show.html.erb
@@ -28,6 +28,9 @@
       <div class="col-sm-1"></div>
       <div class="col-sm-4"><%= render "layouts/info_table" %></div>
     </div>
+    <div class="row mt-2">
+      <p class="text-muted font-weight-lighter"><small>Інформація про графіки із сайту oe.if.ua</small>
+      </div>
   </div>
   <%= render "layouts/footer" %>
 </main>
