--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,18 @@
 <div class="container mt-2">
-    <footer class="border-top">
-        <div class="row pl-3 pt-4">
-            <div class="col-md">
-                <ul class="list-unstyled text-small">
-                    <li><small class="d-block mb-1 text-muted">&copy; 2023 <a class="text-muted text-decoration-none" href="https://voevodin-yura.com/ua" rel="external nofollow" target="_blank">Юра Воєводін</a></small></li>
-                    <li><a class="text-muted text-decoration-none" href="/contacts" rel="nofollow">Контакти</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+  <footer class="border-top">
+    <div class="row pl-3 pt-4">
+      <div class="col-md">
+        <ul class="list-unstyled text-small">
+          <li><small class="d-block mb-1 text-muted">&copy; 2023 <a class="text-muted text-decoration-none" href="https://voevodin-yura.com/ua" rel="external nofollow" target="_blank">Юра Воєводін</a></small></li>
+        </ul>
+      </div>
+      <div class="col-md">
+        <ul class="list-unstyled text-small">
+          <li><a class="text-muted text-decoration-none" href="/contacts" rel="nofollow">Контакти</a></li>
+        </ul>
+      </div>
+      <div class="col-md"></div>
+      <div class="col-md"></div>
+    </div>
+  </footer>
 </div>
