Update status description

--- a/app/views/lines/show.html.erb
+++ b/app/views/lines/show.html.erb
@@ -23,8 +23,10 @@
         <%= render "layouts/row", day: @day, index: index %>
         <% end %>
       </div>
-      <div class="col-sm-4 offset-1"><%= render "layouts/info_table" %></div>
+      <div class="col-md-5"></div>
     </div>
+    <hr>
+    <div class="row"><div class="col-md-4"><%= render "layouts/info_table" %></div></div>
     <div class="row mt-2">
       <p class="text-muted font-weight-lighter"><small>Інформація про графіки із сайту oe.if.ua</small>
       </div>
