--- a/app/views/layouts/_info_table.html.erb
+++ b/app/views/layouts/_info_table.html.erb
@@ -1,26 +1,15 @@
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Колір</th>
-      <th scope="col"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td class="bg-success bg-opacity-75" scope="col"></td>
-      <td scope="col">черга буде з електропостачанням</td>
-    </tr>
-    <tr>
-      <td class="bg-warning bg-opacity-75" scope="col"></td>
-      <td scope="col">можливі вимкнення</td>
-    </tr>
-    <tr>
-      <td class="bg-danger bg-opacity-75" scope="col"></td>
-      <td scope="col">черга буде вимкнена</td>
-    </tr>
-    <tr>
-      <td class="bg-danger bg-body-secondary" scope="col"></td>
-      <td scope="col">немає даних</td>
-    </tr>
-  </tbody>
-</table>
+<div class="row mt-2">
+  <span>Умовні позначення</span>
+</div>
+<div class="row mt-2">
+  <div class="rounded-3 bg-success">черга буде з електропостачанням</div>
+</div>
+<div class="row mt-2">
+  <div class="rounded-3 bg-danger">черга буде вимкнена</div>
+</div>
+<div class="row mt-2">
+  <div class="rounded-3 bg-warning">можливі вимкнення</div>
+</div>
+<div class="row mt-2">
+  <div class="rounded-3 bg-body-secondary">немає даних</div>
+</div>
