--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="row pl-3 pt-4">
       <div class="col-md">
         <ul class="list-unstyled text-small">
-          <li><small class="d-block mb-1 text-muted">&copy; 2023 <a class="text-muted text-decoration-none" href="https://voevodin-yura.com/ua" rel="external nofollow" target="_blank">Юра Воєводін</a></small></li>
+          <li><small class="d-block mb-1 text-muted">&copy; 2023 <a class="text-muted text-decoration-none" href="https://voevodin-yura.com/ua" rel="external nofollow" target="_blank">Юрій Воєводін</a></small></li>
         </ul>
       </div>
       <div class="col-md">
