Update info view

--- a/app/views/layouts/_info_table.html.erb
+++ b/app/views/layouts/_info_table.html.erb
@@ -1,14 +1,14 @@
-<div class="row mt-2">
+<div class="row">
   <span>Умовні позначення</span>
 </div>
 <div class="row mt-2">
-  <div class="rounded-3 bg-success">черга буде з електропостачанням</div>
+  <div class="rounded-3 bg-success text-secondary-emphasis">черга з електропостачанням</div>
 </div>
 <div class="row mt-2">
-  <div class="rounded-3 bg-danger">черга буде вимкнена</div>
+  <div class="rounded-3 bg-danger text-secondary-emphasis">черга вимкнена</div>
 </div>
 <div class="row mt-2">
-  <div class="rounded-3 bg-warning">можливі вимкнення</div>
+  <div class="rounded-3 bg-warning text-body-emphasis">можливі вимкнення</div>
 </div>
 <div class="row mt-2">
   <div class="rounded-3 bg-body-secondary">немає даних</div>
