--- a/app/views/lines/show.html.erb
+++ b/app/views/lines/show.html.erb
@@ -25,11 +25,9 @@
       </div>
       <div class="col-md-5"></div>
     </div>
-    <hr>
-    <div class="row"><div class="col-md-4"><%= render "layouts/info_table" %></div></div>
-    <div class="row mt-2">
-      <p class="text-muted font-weight-lighter"><small>Інформація про графіки із сайту oe.if.ua</small>
-      </div>
+    <div class="row mt-4"><p class="text-muted font-weight-lighter"><small>Інформація про графіки із сайту oe.if.ua</small></div>
+      <hr>
+      <div class="row"><div class="col-sm-3"><%= render "layouts/info_table" %></div></div>
     </div>
     <%= render "layouts/footer" %>
   </main>
