--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -5,9 +5,9 @@
   <div class="container px-4 py-2">
     <h1>Івано-Франківськ - графік відключення світла</h1>
     <h2><%= l Date.today, format: "%A, %e %b %Y" %></h2>
-    <ul>
+    <ul class="list-unstyled">
       <% @lines.each do |line| %>
-      <li><%= link_to line.name, line %></li>
+      <li class="mt-1"><%= link_to line.name, line %></li>
       <% end %>
     </ul>
     <p class="text-muted font-weight-lighter"><small>Інформація про графіки із сайту oe.if.ua</small></p>
