Formatting some files

--- a/app/views/layouts/_text_info.html.erb
+++ b/app/views/layouts/_text_info.html.erb
@@ -1,3 +1,9 @@
 <% if day.present? %>
-<p>На <code><%= Time.now.strftime("%H:%M") %></code> <span class="badge rounded-pill <%= badge_background_class_for(status_for(day, Time.now.hour + 1)) %>"><%= status_text_for(day, Time.now.hour + 1) %></span></p>
+<p>
+  На <code><%= Time.now.strftime("%H:%M") %></code>
+  <span
+    class="badge rounded-pill <%= badge_background_class_for(status_for(day, Time.now.hour + 1)) %>"
+    ><%= status_text_for(day, Time.now.hour + 1) %></span
+  >
+</p>
 <% end %>
