--- a/app/views/lines/show.html.erb
+++ b/app/views/lines/show.html.erb
@@ -9,21 +9,24 @@
         </ol>
       </nav>
     </div>
-    <div class="row"><div class="my-2"><span class="fw-bold"><%= l @date, format: "%A, %e %b %Y" %></span></div></div>
+    <div class="row">
+      <div class="my-2"><span class="fw-bold"><%= l @date, format: "%A, %e %b %Y" %></span></div>
+    </div>
     <div class="row"><%= render "layouts/text_info", day: @day %></div>
     <div class="row">
       <div class="col-6 col-md-3 col-lg-2">
         <% for index in 1..12 %>
-        <%= render "layouts/row", day: @day, index: index %>
+          <%= render "layouts/row", day: @day, index: index %>
         <% end %>
       </div>
       <div class="col-6 col-md-3 col-lg-2">
         <% for index in 13..24 %>
-        <%= render "layouts/row", day: @day, index: index %>
+          <%= render "layouts/row", day: @day, index: index %>
         <% end %>
       </div>
     </div>
-    <div class="row mt-4"><p class="text-muted font-weight-lighter"><small>Інформація про графіки із сайту oe.if.ua</small></div>
+    <div class="row mt-4">
+      <p class="text-muted font-weight-lighter"><small>Інформація про графіки із сайту oe.if.ua</small></div>
     </div>
     <%= render "layouts/footer" %>
   </main>
