--- a/app/views/layouts/_row.html.erb
+++ b/app/views/layouts/_row.html.erb
@@ -1,6 +1,6 @@
 <div class="px-2">
-    <% if day.present? %>
-    <% status = status_for(day, index) %>
+    <% if @day.present? %>
+    <% status = @line.status_for(@day, index) %>
     <div class="row mt-2 <%= border_for(index) %>">
         <div class="rounded-3 <%= text_style_for(index) %> <%= opacity_for(index) %> <%= background_class_for(status) %>"><span><%= (index - 1) %> - <%= index %></span>
             <% if status == 'off' || status == 'maybe' %>
