--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -7,10 +7,15 @@
     <h2><%= l Date.today, format: "%A, %e %b %Y" %></h2>
     <ul class="list-unstyled">
       <% @lines.each do |line| %>
-      <li class="mt-1"><%= link_to line.name, line %></li>
+        <li class="mt-1"><%= link_to line.name, line %></li>
       <% end %>
     </ul>
     <p class="text-muted font-weight-lighter"><small>Інформація про графіки із сайту oe.if.ua</small></p>
+    <figure>
+      <blockquote class="blockquote">
+        <p>"Сусіди у чаті знову питають світло є чи нема"</p>
+      </blockquote>
+    </figure>
   </div>
   <%= render "layouts/footer" %>
 </main>
