--- a/app/views/lines/next.html.erb
+++ b/app/views/lines/next.html.erb
@@ -13,7 +13,10 @@
     <div class="row">
       <div class="my-2"><span class="fw-bold"><%= l @date, format: "%A, %e %b %Y" %></span></div>
     </div>
-    <div class="row"><p><i class="bi bi-exclamation-triangle" style="color: orange;"></i> Орієнтовний графік на завтра</p></div>
+    <div class="row">
+      <p><i class="bi bi-exclamation-triangle" style="color: orange;"></i> Орієнтовний графік на завтра, на основі попередніх даних Прикарпаттяоблеренго.</p>
+      <p class="text-warning">Можливі зміни в графіку</p>
+    </div>
     <div class="row">
       <div class="col-6 col-md-3 col-lg-2">
         <% for index in 1..12 %>
@@ -26,8 +29,6 @@
         <% end %>
       </div>
     </div>
-    <div class="row mt-4">
-      <p class="text-muted font-weight-lighter"><small>Інформація про графіки із сайту oe.if.ua</small></div>
-    </div>
+    <div class="row mt-4"></div>
     <%= render "layouts/footer" %>
   </main>
