--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,11 +4,13 @@
       <div class="col-md">
         <ul class="list-unstyled text-small">
           <li><small class="d-block mb-1 text-muted">&copy; 2023 <a class="text-muted text-decoration-none" href="https://voevodin-yura.com/ua" rel="external nofollow" target="_blank">Юрій Воєводін</a></small></li>
+          <li><a class="text-muted text-decoration-none" href="/contacts" rel="nofollow">Контакти</a></li>
         </ul>
       </div>
       <div class="col-md">
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted text-decoration-none" href="/contacts" rel="nofollow">Контакти</a></li>
+          <li><a class="text-muted text-decoration-none" href="/privacy-policy" rel="nofollow">Політика конфіденційності</a></li>
+            <li><a class="text-muted text-decoration-none" href="/terms-of-service" rel="nofollow">Умови обслуговування</a></li>
         </ul>
       </div>
       <div class="col-md"></div>
