--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,7 +13,11 @@
             <li><a class="text-muted text-decoration-none" href="/terms-of-service" rel="nofollow">Умови обслуговування</a></li>
         </ul>
       </div>
-      <div class="col-md"></div>
+      <div class="col-md">
+        <ul class="list-unstyled text-small">
+          <li><a class="text-muted text-decoration-none" href="/frequently-asked-questions" rel="nofollow">Часті питання</a></li>
+        </ul>
+      </div>
       <div class="col-md"></div>
     </div>
   </footer>
