Always show link to next day

--- a/app/views/lines/next.html.erb
+++ b/app/views/lines/next.html.erb
@@ -13,6 +13,7 @@
     <div class="row">
       <div class="my-2"><span class="fw-bold"><%= l @date, format: "%A, %e %b %Y" %></span></div>
     </div>
+    <% if @day.present? %>
     <div class="row">
       <div class="col">
         <div class="alert alert-warning" role="alert">
@@ -33,6 +34,9 @@
         <% end %>
       </div>
     </div>
+    <% else %>
+    <div class="row"><div class="alert alert-secondary" role="alert">Дані відсутні, чекаємо інформацю від Прикарпаттяобленерго</div></div>
+    <% end %>
     <div class="row mt-4"></div>
     <%= render "layouts/footer" %>
   </main>
