Add table with statistics

--- a/app/views/lines/show.html.erb
+++ b/app/views/lines/show.html.erb
@@ -25,6 +25,9 @@
           <%= render "layouts/row", index: index %>
         <% end %>
       </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <%= render "layouts/statistics_table" %>
+      </div>
     </div>
     <div class="row mt-4">
       <p class="text-muted font-weight-lighter"><small>Інформація про графіки із сайту oe.if.ua</small></div>
