--- a/app/views/lines/next.html.erb
+++ b/app/views/lines/next.html.erb
@@ -24,14 +24,17 @@
     </div>
     <div class="row">
       <div class="col-6 col-md-3 col-lg-2">
-        <% for index in 1..12 %>
+        <% for index in 0..11 %>
           <%= render "layouts/next_row", index: index %>
         <% end %>
       </div>
       <div class="col-6 col-md-3 col-lg-2">
-        <% for index in 13..24 %>
+        <% for index in 12..23 %>
           <%= render "layouts/next_row", index: index %>
         <% end %>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <%= render "layouts/statistics_table" %>
       </div>
     </div>
     <% else %>
