--- a/app/views/layouts/_statistics_table.html.erb
+++ b/app/views/layouts/_statistics_table.html.erb
@@ -1,3 +1,4 @@
+<% if @day.present? %>
 <table class="table table-hover table-sm">
   <thead>
     <tr>
@@ -20,3 +21,4 @@
     </tr>
   </tbody>
 </table>
+<% end %>
